--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<img src="images/owl.gif" alt="flashy" class="w3l">
             <h2 class="main-title">404</span></h2>
 			<p class="w3-agileits2">We can't seem to find the page you're looking for.</p>
-			<p class="copyright">© 2019 Error Page. All Rights Reserved | Design by <a href="#" target="_blank">Code X Myanmar.</a></p>
+			<p class="copyright">© 2019 Error Page. All Rights Reserved | Design by <a href="#" target="_blank">PhyoWaiHlanHtun.</a></p>
         </div>
 	</div>
 </div>	
